<resources>
    <string name="app_name">E-Library</string>
    <string name="title_activity_my_books">MyBooks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="image_view">ImageView</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="valid_email_waring">Please enter a valid email address</string>
    <string name="password_warning">Password Should be 6 characters at least</string>
    <string name="user_exist">User already exist</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="authentication">Authentication</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
</resources>
