<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.example.theeagle.e_library.activities.LoginActivity">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/login_iv"
    android:contentDescription="@string/image_view"
    android:src="@drawable/ic_1009_200"
    android:layout_centerHorizontal="true"
    android:layout_margin="@dimen/dimen_34dp"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:background="@drawable/shape"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@drawable/shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_8dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_16"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff" />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#fff" />
</RelativeLayout>
